# base/src/main/scala/dapex/entities/Endpoint.scala
@@ -1,0 +1,14 @@
+package dapex.entities
+
+import io.circe.{Decoder, Encoder}
+import io.circe.generic.semiauto.{deriveDecoder, deriveEncoder}
+
+case class Endpoint(
+    resource: String,
+    method: String
+)
+
+object Endpoint {
+  implicit val encoder: Encoder[Endpoint] = deriveEncoder
+  implicit val decoder: Decoder[Endpoint] = deriveDecoder
+}
