# base/src/main/scala/dapex/entities/FieldValuePair.scala
@@ -1,0 +1,11 @@
+package dapex.entities
+
+import io.circe.{Decoder, Encoder}
+import io.circe.generic.semiauto.{deriveDecoder, deriveEncoder}
+
+case class FieldValuePair(field: String, value: String)
+
+object FieldValuePair {
+  implicit val encoder: Encoder[FieldValuePair] = deriveEncoder
+  implicit val decoder: Decoder[FieldValuePair] = deriveDecoder
+}
