# src/main/scala/dapex/AppServer.scala
@@ -1,10 +1,17 @@
 package dapex
 
+import cats.Parallel
 import cats.data.NonEmptyList
-import cats.effect.{Bracket, ConcurrentEffect, ContextShift, Resource, Sync, Timer}
-import cats.{Applicative, Monad, MonadError, Parallel}
+import cats.effect.std.Dispatcher
+import cats.effect.{Async, Resource}
+import cats.implicits._
+import com.comcast.ip4s._
 import dapex.config.ServerConfiguration
-import dapex.guardrail.healthcheck.{HealthcheckHandler, HealthcheckResource}
+import dapex.dropoff.domain.endpoint.DropOffEndpointHandler
+import dapex.dropoff.domain.orchestrator.DropOffOrchestrator
+import dapex.dropoff.domain.rabbitmq.{DapexMQPublisher, Rabbit}
+import dapex.guardrail.dropoff.DropoffResource
+import dapex.guardrail.healthcheck.HealthcheckResource
 import dapex.server.domain.healthcheck.{
   HealthCheckService,
   HealthChecker,
@@ -22,11 +29,21 @@ object AppServer {
 
   def createServer[F[
       _
-  ]: Monad: ConcurrentEffect: Timer: Log4CatsLogger: ContextShift: Parallel: Applicative: Bracket[*[
-    _
-  ], Throwable]: Sync: MonadError[*[_], Throwable]](): Resource[F, Server] =
+  ]: Async: Log4CatsLogger: Parallel](): Resource[F, Server] =
     for {
       conf <- Resource.eval(parser.decodePathF[F, ServerConfiguration](path = "server"))
+
+      //RabbitMQ Client and publisher
+      rmqDispatcher <- Dispatcher.parallel
+      client <- Resource.eval(Rabbit.getRabbitClient(conf.rabbitMQ, rmqDispatcher))
+      rmqPublisher = new DapexMQPublisher[F](client)
+
+      // Orchestrator
+      orchestrator = new DropOffOrchestrator[F](rmqPublisher)
+
+      // Endpoint handler
+      endpointHandler = new DropOffEndpointHandler[F](orchestrator)
+      dropOffRoutes = new DropoffResource().routes(endpointHandler)
 
       // Health checkers
       checkers = NonEmptyList.of[HealthChecker[F]](SelfHealthCheck[F])
@@ -36,13 +53,15 @@ object AppServer {
       )
 
       // Routes and HTTP App
-      allRoutes = healthRoutes.orNotFound
+      allRoutes = (healthRoutes <+> dropOffRoutes).orNotFound
       httpApp = Logger.httpApp(logHeaders = true, logBody = true)(allRoutes)
 
       // Build server
+      httpPort = Port.fromInt(conf.http.port.value)
+      httpHost = Ipv4Address.fromString(conf.http.host.value)
       server <- EmberServerBuilder.default
-        .withPort(conf.http.port.value)
-        .withHost(conf.http.host.value)
+        .withPort(httpPort.getOrElse(port"8082"))
+        .withHost(httpHost.getOrElse(ipv4"0.0.0.0"))
         .withHttpApp(httpApp)
         .build
     } yield server
