# src/main/scala/dapex/dropoff/domain/endpoint/DapexTransformer.scala
@@ -1,0 +1,22 @@
+package dapex.dropoff.domain.endpoint
+
+import dapex.entities.DapexMessage
+import dapex.guardrail.definitions.DapexMessageRequest
+import io.scalaland.chimney.dsl._
+
+import scala.util.Try
+
+object DapexTransformer {
+  def transformRequest(request: DapexMessageRequest): Option[DapexMessage] =
+    Try {
+      request
+        .into[DapexMessage]
+        .transform
+    }.toOption
+
+  def transformDapexMessage(dapexMessage: DapexMessage): DapexMessageRequest =
+    dapexMessage
+      .into[DapexMessageRequest]
+      .transform
+
+}
